// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot 1`] = `
<Modal
  className="AddSourceModal"
  onClose={[Function]}
  onConfirm={[Function]}
  open={true}
>
  <Component>
    Add Source
  </Component>
  <Component>
    <Form>
      <Tabs
        onChange={[Function]}
        value="definition"
      >
        <Component
          title="Definition"
          value="definition"
        >
          <DefinitionSource
            definitionsWithTenants={Array []}
            onChange={[Function]}
            setInvalid={[Function]}
          />
        </Component>
        <Component
          title="Tenant"
          value="tenant"
        >
          <TenantSource
            onChange={[Function]}
            setInvalid={[Function]}
            tenantsWithDefinitions={Array []}
          />
        </Component>
      </Tabs>
    </Form>
  </Component>
  <Component>
    <ForwardRef(Button)
      className="cancel"
      main={true}
      onClick={[Function]}
    >
      Cancel
    </ForwardRef(Button)>
    <ForwardRef(Button)
      className="confirm"
      disabled={true}
      main={true}
      onClick={[Function]}
      primary={true}
    >
      Add
    </ForwardRef(Button)>
  </Component>
</Modal>
`;

exports[`should only show MultiDefinitionSource if tenants are not available 1`] = `
<Modal
  className="AddSourceModal"
  onClose={[Function]}
  onConfirm={[Function]}
  open={true}
>
  <Component>
    Add Source
  </Component>
  <Component>
    <Form>
      <MultiDefinitionSource
        definitions={Array []}
        onChange={[Function]}
        setInvalid={[Function]}
      />
    </Form>
  </Component>
  <Component>
    <ForwardRef(Button)
      className="cancel"
      main={true}
      onClick={[Function]}
    >
      Cancel
    </ForwardRef(Button)>
    <ForwardRef(Button)
      className="confirm"
      disabled={true}
      main={true}
      onClick={[Function]}
      primary={true}
    >
      Add
    </ForwardRef(Button)>
  </Component>
</Modal>
`;
